--- a/LogInApp/Base.lproj/Main.storyboard
+++ b/LogInApp/Base.lproj/Main.storyboard
@@ -43,7 +43,7 @@
                                 <buttonConfiguration key="configuration" style="plain" title="Log In"/>
                                 <connections>
                                     <action selector="logInButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="Eyg-h6-1YY"/>
-                                    <segue destination="2L8-mg-drT" kind="presentation" modalPresentationStyle="fullScreen" id="OdI-59-aGS"/>
+                                    <segue destination="jc9-uQ-Rjn" kind="presentation" modalPresentationStyle="fullScreen" id="OdI-59-aGS"/>
                                 </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="53" translatesAutoresizingMaskIntoConstraints="NO" id="uXD-oK-aZR">
@@ -91,7 +91,7 @@
             </objects>
             <point key="canvasLocation" x="34.782608695652179" y="97.767857142857139"/>
         </scene>
-        <!--Log Out View Controller-->
+        <!--Profile-->
         <scene sceneID="LPO-d4-DHo">
             <objects>
                 <viewController id="2L8-mg-drT" customClass="LogOutViewController" customModule="LogInApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -126,6 +126,7 @@
                             <constraint firstItem="7tG-H9-MrO" firstAttribute="centerX" secondItem="6Vk-6U-siF" secondAttribute="centerX" id="zre-u8-12j"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Profile" id="4cq-Vy-zNL"/>
                     <navigationItem key="navigationItem" id="70H-XD-pKg"/>
                     <connections>
                         <outlet property="welcomeUser" destination="7tG-H9-MrO" id="D4Q-sy-Cy0"/>
@@ -134,10 +135,99 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="278-1Q-gl4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="Dbd-vQ-efX" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
+            <point key="canvasLocation" x="35" y="826"/>
+        </scene>
+        <!--User Info View Controller-->
+        <scene sceneID="ZjL-3H-Dx4">
+            <objects>
+                <viewController modalPresentationStyle="fullScreen" id="m0N-MJ-2pI" customClass="UserInfoViewController" customModule="LogInApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="60c-sH-PwI">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="sUM-mO-jsl"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="3Wg-mK-Kht"/>
+                    <connections>
+                        <segue destination="t5D-Y9-XYp" kind="presentation" id="rAT-gU-6ae"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qb4-Sn-D5U" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1561" y="826"/>
+        </scene>
+        <!--User Photo View Controller-->
+        <scene sceneID="uGB-UK-1Sk">
+            <objects>
+                <viewController modalPresentationStyle="fullScreen" id="t5D-Y9-XYp" customClass="UserPhotoViewController" customModule="LogInApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="XSi-Av-scW">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tqT-Zf-eCj">
+                                <rect key="frame" x="87" y="328.5" width="240" height="239"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="c7W-hF-P8j"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="tqT-Zf-eCj" firstAttribute="centerY" secondItem="XSi-Av-scW" secondAttribute="centerY" id="LJy-g1-IFt"/>
+                            <constraint firstItem="tqT-Zf-eCj" firstAttribute="width" secondItem="XSi-Av-scW" secondAttribute="width" multiplier="0.57971" id="LNX-Vn-rxa"/>
+                            <constraint firstItem="tqT-Zf-eCj" firstAttribute="height" secondItem="XSi-Av-scW" secondAttribute="height" multiplier="0.266741" id="mm8-nO-svF"/>
+                            <constraint firstItem="tqT-Zf-eCj" firstAttribute="centerX" secondItem="XSi-Av-scW" secondAttribute="centerX" id="tMp-Q1-S0C"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="userPhoto" destination="tqT-Zf-eCj" id="wG9-la-Zlg"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7fC-0q-OKt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2344.9275362318845" y="825.66964285714278"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="FWT-Of-Vi0">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="jc9-uQ-Rjn" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="P9h-Yf-Dz6">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="2L8-mg-drT" kind="relationship" relationship="viewControllers" id="jHg-Zf-RVb"/>
+                        <segue destination="kv6-to-27D" kind="relationship" relationship="viewControllers" id="BYM-YV-PHR"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BGV-Qq-PXh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
             <point key="canvasLocation" x="787" y="98"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="fSO-sm-8Wz">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kv6-to-27D" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="sA8-yo-jWG"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Hlo-Rs-7A1">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="m0N-MJ-2pI" kind="relationship" relationship="rootViewController" id="3Fi-8f-x6g"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="t6w-uQ-KLb" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="787" y="826"/>
         </scene>
     </scenes>
     <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemGray5Color">
             <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
